--- a/.github/workflows/cd-staging.yml
+++ b/.github/workflows/cd-staging.yml
@@ -9,6 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TF_VERSION: latest
+      TF_DIRECTORY: tf/staging
+      TF_DEPLOYMENT_ID: fastly_service_v1
+      TF_RESOURCE_ID: api-service-staging-1SOF2sf218IFdLZhnqBlKB
+      TF_SERVICE_ID: 1SOF2sf218IFdLZhnqBlKB
       TF_VAR_FASTLY_STAGING_API_KEY: ${{ secrets.TF_VAR_FASTLY_STAGING_API_KEY }}
     steps:
       - name: Checkout
@@ -19,14 +23,14 @@ jobs:
           tf_actions_version: ${{ env.TF_VERSION }}
           tf_actions_subcommand: init
           tf_actions_comment: false
-          args: tf/staging
+          args: ${{ env.TF_DIRECTORY }}
       - name: Terraform Import
         uses: hashicorp/terraform-github-actions@1acd6aa693246e33c9d49f861878fc5813736d47
         with:
           tf_actions_version: ${{ env.TF_VERSION }}
           tf_actions_subcommand: import
           tf_actions_comment: false
-          args: -config=tf/staging -no-color fastly_service_v1.api-service-staging-1SOF2sf218IFdLZhnqBlKB 1SOF2sf218IFdLZhnqBlKB
+          args: -config=${{ env.TF_DIRECTORY }} -no-color ${{ env.TF_DEPLOYMENT_ID }}.${{ env.TF_RESOURCE_ID }} ${{ env.TF_SERVICE_ID }}
       - name: Update Terraform State
         run: jq '.resources[].instances[].attributes.activate = true' terraform.tfstate > temp && mv temp terraform.tfstate
       - name: Terraform Plan
@@ -35,7 +39,7 @@ jobs:
           tf_actions_version: ${{ env.TF_VERSION }}
           tf_actions_subcommand: plan
           tf_actions_comment: false
-          args: -out=staging.plan tf/staging
+          args: -out=staging.plan ${{ env.TF_DIRECTORY }}
       - name: Terraform Apply
         uses: hashicorp/terraform-github-actions@1acd6aa693246e33c9d49f861878fc5813736d47
         with:
